使用 Colab 创建而成

--- a/examples/customization/object_detector.ipynb
+++ b/examples/customization/object_detector.ipynb
@@ -156,10 +156,13 @@
       },
       "outputs": [],
       "source": [
-        "!wget https://storage.googleapis.com/mediapipe-tasks/object_detector/android_figurine.zip\n",
-        "!unzip android_figurine.zip\n",
-        "train_dataset_path = \"android_figurine/train\"\n",
-        "validation_dataset_path = \"android_figurine/validation\""
+        "#!wget https://storage.googleapis.com/mediapipe-tasks/object_detector/android_figurine.zip\n",
+        "#!unzip android_figurine.zip\n",
+        "!unzip plate.zip\n",
+        "#train_dataset_path = \"android_figurine/train\"\n",
+        "#validation_dataset_path = \"android_figurine/validation\"\n",
+        "train_dataset_path = \"plate/train\"\n",
+        "validation_dataset_path = \"plate/validation\""
       ]
     },
     {
@@ -328,7 +331,8 @@
         "  fig, axs = plt.subplots(n_rows, 3, figsize=(24, n_rows*8)) # 3 columns(2nd index), 8x8 for each image\n",
         "  for ind, (image_id, annotations_list) in enumerate(list(image_annots.items())[:max_examples]):\n",
         "    ax = axs[ind//3, ind%3]\n",
-        "    img = plt.imread(os.path.join(dataset_folder, \"images\", images[image_id][\"file_name\"]))\n",
+        "    #img = plt.imread(os.path.join(dataset_folder, \"images\", images[image_id][\"file_name\"]))\n",
+        "    img = plt.imread(os.path.join(dataset_folder, images[image_id][\"file_name\"]))\n",
         "    ax.imshow(img)\n",
         "    draw_bbox(ax, annotations_list, cat_id_to_label, img.shape)\n",
         "  plt.show()\n",
