使用 Colab 创建而成

--- a/examples/customization/object_detector.ipynb
+++ b/examples/customization/object_detector.ipynb
@@ -332,7 +332,7 @@
         "  for ind, (image_id, annotations_list) in enumerate(list(image_annots.items())[:max_examples]):\n",
         "    ax = axs[ind//3, ind%3]\n",
         "    #img = plt.imread(os.path.join(dataset_folder, \"images\", images[image_id][\"file_name\"]))\n",
-        "    img = plt.imread(os.path.join(dataset_folder, images[image_id][\"file_name\"]))\n",
+        "    img = plt.imread(os.path.join(dataset_folder,\"images\", images[image_id][\"file_name\"]))\n",
         "    ax.imshow(img)\n",
         "    draw_bbox(ax, annotations_list, cat_id_to_label, img.shape)\n",
         "  plt.show()\n",
