使用 Colab 创建而成

--- a/examples/customization/object_detector.ipynb
+++ b/examples/customization/object_detector.ipynb
@@ -130,6 +130,27 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "qingminghuang:mounted google drive"
+      ],
+      "metadata": {
+        "id": "wC2A55Sy50Cb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "VBAtipPq5N-0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "_zP1AkaRL72Z"
       },
@@ -158,7 +179,7 @@
       "source": [
         "#!wget https://storage.googleapis.com/mediapipe-tasks/object_detector/android_figurine.zip\n",
         "#!unzip android_figurine.zip\n",
-        "!unzip plate.zip\n",
+        "!unzip /content/drive/MyDrive/AI/plate.zip\n",
         "#train_dataset_path = \"android_figurine/train\"\n",
         "#validation_dataset_path = \"android_figurine/validation\"\n",
         "train_dataset_path = \"plate/train\"\n",
@@ -405,7 +426,8 @@
       },
       "outputs": [],
       "source": [
-        "spec = object_detector.SupportedModels.MOBILENET_MULTI_AVG\n",
+        "#spec = object_detector.SupportedModels.MOBILENET_MULTI_AVG\n",
+        "spec = object_detector.SupportedModels.MOBILENET_V2\n",
         "hparams = object_detector.HParams(export_dir='exported_model')\n",
         "options = object_detector.ObjectDetectorOptions(\n",
         "    supported_model=spec,\n",
